--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@maplibre/maplibre-gl-leaflet": "^0.1.3",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -29,8 +30,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase": "^12.3.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.515.0",
+    "maplibre-gl": "^5.8.0",
     "next": "^15.5.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
